# algebric-physics-2

./: .clang-format  .clangd-linux  .clangd-windows  .gitignore  .gitmodules  CMakeLists.txt  README.MD
res/: basic.frag  basic.vert  line.vert  lines.vert  plane.frag  plane.vert  point.frag  point.vert  points.vert
src/: constants.hpp  main.cpp
src/gl/: gl.hpp  helper.cpp  helper.hpp  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp
src/physics/: Time.cpp  Time.hpp  base.hpp  density.cpp  density.hpp  links.cpp  links.hpp  particle.cpp  physics.hpp
src/rendering/: Camera.cpp  Camera.hpp  Displayator.cpp  Displayator.hpp
src/utils/: creators.cpp  creators.hpp  events.hpp  math.hpp  shapes.cpp  shapes.hpp  types.cpp  types.hpp
